--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-# .env
 DB_HOST=switchyard.proxy.rlwy.net
+DB_PORT=58514
 DB_USER=root
 DB_PASSWORD=pfoPZsnTIbrAISUNgDoBXhzhnHYmGcrM
 DB_NAME=railway
-PORT=58514 
+PORT=3000
