--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-DB_HOST=switchyard.proxy.rlwy.net
-DB_PORT=58514
-DB_USER=root
-DB_PASSWORD=pfoPZsnTIbrAISUNgDoBXhzhnHYmGcrM
-DB_NAME=railway
+MYSQLHOST=mysql.railway.internal
+MYSQLPORT=3306
+MYSQLUSER=root
+MYSQLPASSWORD=pfoPZsnTIbrAISUNgDoBXhzhnHYmGcrM
+MYSQLDATABASE=railway
 
