--- a/.env
+++ b/.env
@@ -1,6 +1,5 @@
-MYSQLHOST=mysql.railway.internal
-MYSQLPORT=3306
-MYSQLUSER=root
-MYSQLPASSWORD=pfoPZsnTIbrAISUNgDoBXhzhnHYmGcrM
-MYSQLDATABASE=railway
-
+DB_HOST=mysql.railway.internal
+DB_PORT=3306
+DB_USER=root
+DB_PASSWORD=pfoPZsnTIbrAISUNgDoBXhzhnHYmGcrM
+DB_NAME=railway
