--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-DB_HOST=mysql.railway.internal
-DB_PORT=3306
+DB_HOST=switchyard.proxy.rlwy.net
+DB_PORT=58514
 DB_USER=root
 DB_PASSWORD=pfoPZsnTIbrAISUNgDoBXhzhnHYmGcrM
 DB_NAME=railway
