--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 # .env
+JWT_SECRET="default_secret_key"
 DB_HOST=switchyard.proxy.rlwy.net
 DB_USER=root
 DB_PASSWORD=pfoPZsnTIbrAISUNgDoBXhzhnHYmGcrM
