--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # .env
-JWT_SECRET="default_secret_key"
+JWT_SECRET=default_secret_key
 DB_HOST=switchyard.proxy.rlwy.net
 DB_USER=root
 DB_PASSWORD=pfoPZsnTIbrAISUNgDoBXhzhnHYmGcrM
